name:   passpb
version:        0.0
license:        BSD3
license-file:   LICENSE
author:         Yuichiro Hanada
maintainer:     Yuichiro Hanada
stability:      Experimental
synopsis:       A simple Webapp for managing passwords.
cabal-version:  >= 1.10
build-type:     Simple

executable Main
  Hs-source-dirs: src
  main-is: Main.hs
  Default-Language: Haskell2010
  ghc-options: -Wall

  build-depends:
      base >= 4.6 && < 5
    , blaze-html
    , hamlet
    , scrypt
    , scotty
    , text
    , transformers
    , wai-extra

