name:   passpb
version:        0.0
license:        BSD3
license-file:   LICENSE
author:         Yuichiro Hanada
maintainer:     Yuichiro Hanada
stability:      Experimental
synopsis:       A simple Webapp for managing passwords.
cabal-version:  >= 1.10
build-type:     Simple

Library
  Default-Language: Haskell2010
  ghc-options: -Wall
  extra-libraries: pthread

  build-depends:
      base >= 4.6 && < 5
    , blaze-builder
    , blaze-html
    , bytestring
    , cookie
    , clientsession
    , cryptohash
    , hamlet
    , persistent
    , persistent-template
    , persistent-sqlite
    , scrypt >= 0.5
    , scotty
    , text
    , transformers
    , wai-extra
    , wai-middleware-static

  exposed-modules:
    Web.Passpb.App
    Web.Passpb.Crypt
    Web.Passpb.Model
    Web.Passpb.Route

executable Main
  Hs-source-dirs: src
  main-is: Main.hs
  Default-Language: Haskell2010
  ghc-options: -Wall
  extra-libraries: pthread

  build-depends:
      base >= 4.6 && < 5
    , bytestring
    , passpb
    , persistent-sqlite
    , scotty
    , text
